Renamed "resource" to "asset".

--- a/docs/formalism.tex
+++ b/docs/formalism.tex
@@ -107,7 +107,7 @@
 \subsection{Key Features}
 
 \begin{itemize}
-\item a safer and more natural model for programming contracts that move around and store money and other resource-like objects.
+\item a safer and more natural model for programming contracts that move around and store money and other asset-like objects.
 \item allows programmers to specify contract behavior using finite state-machines.
 \item possibly: a safer transaction model (we've talked about actions, anonymous states, other techniques/restrictions to handle this).
 \end{itemize}
