--- a/docs/yul_evm_writeup/main.tex
+++ b/docs/yul_evm_writeup/main.tex
@@ -6,7 +6,7 @@
 \title{Running Obsidian Smart Contracts On EVM}
 
 \author{Ian Ernest Voysey}
-\orcid{0000-0002-6041-2010}  %% TODO check that this really is me
+\orcid{0000-0002-6041-2010}
 \affiliation{
   \institution{Carnegie Mellon University}
   \streetaddress{5000 Forbes Ave}
