future work stubs

--- a/docs/yul_evm_writeup/main.tex
+++ b/docs/yul_evm_writeup/main.tex
@@ -53,6 +53,9 @@
 \section{Benchmarks}\label{sec:benchmarks}
 \input{benchmarks}
 
+\section{Future Work}\label{sec:futurework}
+\input{futurework}
+
 \section{Related Work}\label{sec:relatedwork}
 \input{relatedwork}
 
