--- a/docs/yul_evm_writeup/main.tex
+++ b/docs/yul_evm_writeup/main.tex
@@ -1,20 +1,13 @@
 \documentclass[sigplan,review,screen]{acmart}
 \usepackage{listings}
-
+\input{macros}
 \input{yul}
 \begin{document}
 \title{Running Obsidian Smart Contracts On EVM}
 
 \author{Ian Ernest Voysey}
 \orcid{0000-0002-6041-2010}
-\affiliation{
-  \institution{Carnegie Mellon University}
-  \streetaddress{5000 Forbes Ave}
-  \city{Pittsburgh}
-  \state{PA}
-  \postcode{15217}
-  \country{USA}
-}
+\cmu{}
 \email{iev@cs.cmu.edu}
 
 \author{Michael Coblenz}
@@ -31,18 +24,10 @@
 
 \author{Jonathan Aldrich}
 \orcid{0000-0003-0631-5591}
-\affiliation{
-  \institution{Carnegie Mellon University}
-  \streetaddress{5000 Forbes Ave}
-  \city{Pittsburgh}
-  \state{PA}
-  \postcode{15217}
-  \country{USA}
-}
+\cmu{}
 \email{jonathan.aldrich@cs.cmu.edu}
 
 \maketitle
-\input{macros}
 
 \section{Introduction}\label{sec:intro}
 \input{intro}
