--- a/docs/yul_evm_writeup/benchmarks.tex
+++ b/docs/yul_evm_writeup/benchmarks.tex
@@ -1,18 +1,18 @@
 \subsection{Without Pointers}
 
-story: overhead here but it's acceptable. optimizer does a lot.
+\todo{overhead here but it's acceptable. optimizer does a lot.}
 
 \subsection{With Pointers}
 
-story: lots of overhead; it's cheaper to turn off gc, because you're doing
-more work collecting than you get repaid for
+\todo{lots of overhead; it's cheaper to turn off gc, because you're doing
+  more work collecting than you get repaid for}
 
 \subsection{Linked List}
 
-story: once you have enough in storage, the rebates take over and are more
+\todo{once you have enough in storage, the rebates take over and are more
 than the cost of collecting them. with a simple LL structure that's around
 XXX. if you imagine a doubly linked list backing a priority / de / queue,
 it'll be faster. that datastructure is known to be hard to implement in the
 sort of associative mappings that are built into solidity, and its use
 might arise very naturally from a smart contract that processes queries in
-arrival order.
+arrival order.}
