--- a/docs/yul_evm_writeup/main.tex
+++ b/docs/yul_evm_writeup/main.tex
@@ -32,7 +32,7 @@
 \section{Introduction}\label{sec:intro}
 \input{intro}
 
-\section{Layout}\label{sec:layout}
+\section{Target Object Layout and Execution}\label{sec:layout}
 \input{layout}
 
 \section{Benchmarks}\label{sec:benchmarks}
