--- a/docs/yul_evm_writeup/layout.tex
+++ b/docs/yul_evm_writeup/layout.tex
@@ -2,13 +2,13 @@ The Obsidian compiler targets either the Fabric framework or Yul. Here we
 are only concerned with the latter, and the implementations do not
 interact.
 
-To run the emitted Yul code, we invoke \texttt{solc} to produce an EVM
-bytecode via testing harness written in Python, which then starts and
-interacts with a Ganache instance via ABI-encoded data in RFC calls via the
-Python web3 library. This process yields an integer answer to a specified
-transaction call against the deployed object, as well as logging artifacts
-and observable changes to storage, which the test harness is responsible
-for comparing to expected values for each test.
+To run the emitted Yul code, we invoke \texttt{solc} to produce EVM
+bytecode via a testing harness written in Python, which then starts and
+interacts with a Ganache instance with RFC calls and ABI-encoded data
+payloads, relying on the Python web3 library. This process yields an
+integer answer to a specified transaction call against the deployed object
+as well as logging artifacts and observable changes to storage, which the
+test compares to expected values per test.
 
 In each test case, we consider translating a collection of one or more
 Obsidian contracts, exactly one of which is the \emph{main} contract,
@@ -42,6 +42,8 @@ object "MainContractName" {
     \end{lstlisting}
 \end{figure}
 
+\subsection{Per-contract Generated Transactions}
+
 The compiler emits a default constructor transaction for any contract that
 lacks a constructor. In the style of C++, this default constructor takes
 enough arguments to populate the fields of the contract. \cite{TODO} Space
@@ -67,13 +69,15 @@ copied by calling the relevant tracer for the contract type recursively on
 the location given by the pointer.
 
 We maintain the invariant that all addresses in memory are less than
-the \emph{threshold} $2^{256}-1$ (a \yulsrc{uint32} that looks
+a \emph{threshold value} all addresses in storage are greater or equal to
+it. That value is $2^{256}/2$ or, concretely a \yulsrc{uint32} that looks
 like \texttt{0x80...0}, which marks the midpoint of the address space of
-storage) and all addresses in storage are greater or equal. This offset
-effectively halves the size of storage, but by doing so allows us to know
-at runtime where an address lives and use the appropriate commands on it,
-i.e. picking between \yulsrc{mload} and \yulsrc{sload}. Since storage is so
-large, the reduced size is not problematic.
+storage. This offset invariant effectively halves the size of storage, but
+by doing so allows us to know at runtime where an address lives and use the
+appropriate commands on it, i.e. picking between \yulsrc{mload}
+and \yulsrc{sload}. Since storage is so large and the smart contracts we
+are interested in are quite modest in size, the storage reduction is not
+problematic.
 
 To maintain this invariant, when a tracer writes a reference to storage,
 the address value of the pointer itself is increased by the threshold
@@ -89,7 +93,7 @@ storage which is how we amortize the cost of the copying
 operation. \cite{TODO}
 
 
-\subsection{Deployment}
+\subsection{The Deployment Block}
 
 The main task at deployment time is to build an instance of the main
 contract in memory and then copy that to storage. This copy serves as the
@@ -107,14 +111,60 @@ use the emitted constructor to build it there, then run the tracer on it to
 copy it to storage. Because we know the first address that allocator will
 give in memory and the mapping the tracer applies to addresses to compute
 their place in storage, we know where this will live in storage and that
-serves as the root.
+serves as the \emph{root}.
 
-\subsection{Invocation}
+\subsection{The Invocation Block}
 
 Instances of Obsidian objects can refer to one another, so their
 translations in to Yul must be able to as well. This means at least that
 they must have access to the same memory during execution. To that end, we
 \emph{flatten} the contracts into one object structured as in Figure
-\ref{code.1}. The name of each transaction is prefixed with the name of its
-origin contract in the translation; the structure of Obsidian files
-gaurantees that this is unique. Constructors
+\ref{code.1}.
+
+The block begins with checks against the structure of the call and then
+inspects the call data in the dispatch table to determine which transaction
+to run, per the ABI encoding. The available transactions are the ones in
+the main contract that are not private and not constructors. The
+transaction is run against the instance of the main contract that's been
+built and copied to storage in the deployment block, which we can assume
+has been run first. We know the address in storage of this root instance
+statically, since we know the first address that the allocator will emit as
+well as the threshold value by which it will have been offset.
+
+This is followed by a simple memory allocator and functions for
+manipulating data against the ABI specified encoding and decodings.
+
+This is followed by the transactions from the contracts. The name of each
+transaction is prefixed with the name of its origin contract in the
+translation; the structure of Obsidian files guarantees that this is
+unique. Each contract may have multiple constructors, so those are
+additionally prefixed with a hash of their type signature which makes them
+unique. The generated default constructor follows the same convention,
+since it's only emitted when no constructor is present.
+
+Each emitted transaction is enhanced with an additional argument
+named \yulsrc{this} in the first position which we assume to be an address
+in either memory or storage that has the instance upon which the
+transaction should operate. Fields are written into memory in the order in
+which they appear in the Obsidian source; since the size of each is given
+by its type, which is known to the compiler statically, it is easy to
+compute offsets against \yulsrc{this} to locate field values in
+memory. Since we know which fields are primitives and which are references
+to instances of other contracts, and know which pointers are in memory and
+storage because of our threshold invariant, we know at runtime how to
+follow references and which commands to use to do so.
+
+To enable garbage collection, the compiler adds a field to each contract
+before translation to count the number of references to each instance of
+that object in storage. At instance creation time, during execution, the
+field starts at $1$; if it is ever $0$, it's safe to reclaim that the space
+in storage occupied by that instance. This field is used internally only,
+it is not directly available to the Obsidian programmer. Instead, they are
+offered methods \obssrc{retain} and \obssrc{release} for every
+object. \obssrc{retain} increments the reference counter field, and is
+called by the programmer to indicate that they are not yet done with a
+particular instance; \obssrc{release} decrements the counter and triggers
+the wiper functions on the relevant storage address if appropriate.
+
+The implementations of these are emitted next in the invocation block,
+followed by the constructors, tracers, and wipers as described above.
