adding an exception to protect summing benchmarks

--- a/docs/yul_evm_writeup/layout.tex
+++ b/docs/yul_evm_writeup/layout.tex
@@ -8,7 +8,7 @@ interacts with a Ganache instance with RFC calls and ABI-encoded data
 payloads, relying on the Python web3 library. This process yields an
 integer answer to a specified transaction call against the deployed object
 as well as logging artifacts and observable changes to storage, which the
-test compares to expected values per test.
+harness compares to expected values per test.
 
 In each test case, we consider translating a collection of one or more
 Obsidian contracts, exactly one of which is the \emph{main} contract,
