--- a/docs/yul_evm_writeup/main.tex
+++ b/docs/yul_evm_writeup/main.tex
@@ -1,5 +1,6 @@
 \documentclass[sigplan,review,screen]{acmart}
 \usepackage{listings}
+\usepackage[l3]{csvsimple}
 \input{macros}
 \input{yul}
 \begin{document}
