--- a/docs/yul_evm_writeup/futurework.tex
+++ b/docs/yul_evm_writeup/futurework.tex
@@ -70,3 +70,9 @@ These features have been on our roadmap since the beginning of this
 project, but the implementation of them was eclipsed by the layout
 described in \ref{sec:layout}, which were both our main concern and more
 intricate than anticipated.
+
+The next step for benchmarking would be to do a side by side comparison
+with reference Solidity examples, rather than just quantifying what happens
+in the presence of garbage collection or not in our own environment. It
+would be of particular interest to do a comparison to several live
+implementation of linked lists that are actually deployed and used.
