--- a/docs/yul_evm_writeup/main.tex
+++ b/docs/yul_evm_writeup/main.tex
@@ -1,8 +1,9 @@
 \documentclass[sigplan,review,screen]{acmart}
 \usepackage{listings}
 \usepackage[l3]{csvsimple}
+\usepackage{graphics}
 \input{macros}
-\input{yul}
+\input{languagedefs}
 \begin{document}
 \title{Running Obsidian Smart Contracts On EVM}
 
